--- a/frontend/src/components/sections/HeroHeader/HeroHeader.module.scss
+++ b/frontend/src/components/sections/HeroHeader/HeroHeader.module.scss
@@ -5,24 +5,43 @@
   height: 300px;
   position: relative;
 
+  @media (min-width: 920px) {
+    height: 400px;
+    background-position: 0% 33%;
+  }
+
   &__content {
-    position: relative;
-    top: 2rem;
-    width: 200px;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 300px;
+    margin: 2rem;
     background: white;
     padding: 2rem;
     text-align: left;
     margin: 0 auto;
 
+    @media (min-width: 920px) {
+      margin: 2rem;
+    }
+
     &__title {
       font-weight: bold;
       font-size: 1rem;
       margin: 0;
+
+      @media (min-width: 920px) {
+        font-size: 1.5rem;
+      }
     }
 
     &__description {
       font-size: 0.9rem;
       margin-bottom: 0;
+
+      @media (min-width: 920px) {
+        font-size: 1.2rem;
+      }
     }
   }
 }
