--- a/frontend/src/components/templates/ProfileTemplate/ProfileTemplate.module.scss
+++ b/frontend/src/components/templates/ProfileTemplate/ProfileTemplate.module.scss
@@ -5,5 +5,38 @@
   &__header {
     color: #fff;
     margin-bottom: 2rem;
+
+    &__editName {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+
+      &__inputs {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        &__input {
+          width: 100%;
+          padding: 1rem;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+        }
+      }
+
+      &__buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        & button {
+          min-width: 150px;
+        }
+      }
+    }
   }
 }
